@@ -26,6 +26,10 @@ Extension modules
 Library
 -------
 
+- Bug #980327: ntpath not handles compressing erroneous slashes between the
+  drive letter and the rest of the path.  Also clearly handles UNC addresses now
+  as well.  Thanks Paul Moore.
+
 - bug #679953: zipfile.py should now work for files over 2 GB.  The packed data
   for file sizes (compressed and uncompressed) was being stored as signed
   instead of unsigned.
